data/derived/fa15/progs/unify/prog2000.ml.out
Characters 29-37:
  let fixpoint (f,b) = wwhile ((f, f b),b);;
                               ^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
